# gradlab

./: .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backend/: ai_tutor.py  build.sh  handler.py  template.yaml
engine/: README.md  pyproject.toml
engine/nanograd/: __init__.py  forest.py  nn.py  optim.py  problems.py  svm.py  value.py
engine/tests/: test_autograd.py  test_models.py  test_optim.py
frontend/: app.js  config.js  engine.js  index.html  styles.css
scripts/: run_local.py
